Projeto_Compilador/PL_Grupo5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> PROGRAM name vars code
Rule 2     name -> IDENTIFIER SEMICOLON
Rule 3     vars -> VAR varstail
Rule 4     vars -> empty
Rule 5     varstail -> vardecl varstail
Rule 6     varstail -> empty
Rule 7     vardecl -> idlist COLON type SEMICOLON
Rule 8     idlist -> IDENTIFIER idlistTail
Rule 9     idlistTail -> COMMA IDENTIFIER idlistTail
Rule 10    idlistTail -> empty
Rule 11    type -> TYPE_INTEGER
Rule 12    type -> TYPE_REAL
Rule 13    type -> BOOLEAN
Rule 14    type -> TYPE_STRING
Rule 15    type -> ARRAY LBRACKET arraytypes RBRACKET OF type
Rule 16    arraytypes -> INTEGER
Rule 17    arraytypes -> INTEGER DOT DOT INTEGER
Rule 18    code -> BEGIN expressions END_DOT
Rule 19    dotless_code -> BEGIN expressions END
Rule 20    expressions -> statement expressions_tail
Rule 21    expressions -> empty
Rule 22    expressions_tail -> SEMICOLON expressions
Rule 23    expressions_tail -> empty
Rule 24    statement -> open_statement
Rule 25    statement -> closed_statement
Rule 26    open_statement -> IF if_condition THEN code_or_statement
Rule 27    open_statement -> IF if_condition THEN code_or_statement ELSE open_statement
Rule 28    open_statement -> WHILE if_condition DO open_statement
Rule 29    open_statement -> FOR for_condition DO open_statement
Rule 30    closed_statement -> IDENTIFIER identifier_assign_expression
Rule 31    closed_statement -> WRITELN write_statement
Rule 32    closed_statement -> WRITE write_statement
Rule 33    closed_statement -> READLN readln_statement
Rule 34    closed_statement -> IF if_condition THEN code_or_statement ELSE code_or_statement
Rule 35    closed_statement -> FOR for_condition DO code_or_statement
Rule 36    closed_statement -> WHILE if_condition DO code_or_statement
Rule 37    identifier_assign_expression -> ASSIGN expression
Rule 38    identifier_assign_expression -> LBRACKET simple_expression RBRACKET ASSIGN expression
Rule 39    for_condition -> expression ASSIGN expression to_expression
Rule 40    to_expression -> TO expression
Rule 41    to_expression -> DOWNTO expression
Rule 42    code_or_statement -> dotless_code
Rule 43    code_or_statement -> closed_statement
Rule 44    if_condition -> expression
Rule 45    write_statement -> LPAREN string_statement RPAREN
Rule 46    readln_statement -> LPAREN string_statement RPAREN
Rule 47    string_statement -> expression
Rule 48    string_statement -> expression COMMA string_statement
Rule 49    expression -> expression OR and_expression
Rule 50    expression -> and_expression
Rule 51    and_expression -> and_expression AND relation_expression
Rule 52    and_expression -> relation_expression
Rule 53    relation_expression -> simple_expression expression_tail
Rule 54    relation_expression -> NOT simple_expression expression_tail
Rule 55    expression_tail -> LT simple_expression
Rule 56    expression_tail -> GT simple_expression
Rule 57    expression_tail -> LE simple_expression
Rule 58    expression_tail -> GE simple_expression
Rule 59    expression_tail -> NE simple_expression
Rule 60    expression_tail -> EQUAL simple_expression
Rule 61    expression_tail -> empty
Rule 62    simple_expression -> term simple_expression_tail
Rule 63    simple_expression_tail -> PLUS term simple_expression_tail
Rule 64    simple_expression_tail -> MINUS term simple_expression_tail
Rule 65    simple_expression_tail -> empty
Rule 66    term -> factor term_tail
Rule 67    term_tail -> TIMES factor term_tail
Rule 68    term_tail -> DIVIDE factor term_tail
Rule 69    term_tail -> MOD factor term_tail
Rule 70    term_tail -> REAL_DIVIDE factor term_tail
Rule 71    term_tail -> empty
Rule 72    factor -> PLUS factor
Rule 73    factor -> MINUS factor
Rule 74    factor -> LPAREN expression RPAREN
Rule 75    factor -> INTEGER
Rule 76    factor -> REAL
Rule 77    factor -> IDENTIFIER identifier_expression
Rule 78    factor -> IDENTIFIER length_expression
Rule 79    factor -> TRUE
Rule 80    factor -> STRING
Rule 81    factor -> FALSE
Rule 82    length_expression -> LPAREN IDENTIFIER RPAREN
Rule 83    identifier_expression -> LBRACKET expression RBRACKET
Rule 84    identifier_expression -> empty
Rule 85    empty -> <empty>

Terminals, with rules where they appear

AND                  : 51
ARRAY                : 15
ASSIGN               : 37 38 39
BEGIN                : 18 19
BOOLEAN              : 13
COLON                : 7
COMMA                : 9 48
DIVIDE               : 68
DO                   : 28 29 35 36
DOT                  : 17 17
DOWNTO               : 41
ELSE                 : 27 34
END                  : 19
END_DOT              : 18
EQUAL                : 60
FALSE                : 81
FOR                  : 29 35
GE                   : 58
GT                   : 56
IDENTIFIER           : 2 8 9 30 77 78 82
IF                   : 26 27 34
INTEGER              : 16 17 17 75
LBRACKET             : 15 38 83
LE                   : 57
LPAREN               : 45 46 74 82
LT                   : 55
MINUS                : 64 73
MOD                  : 69
NE                   : 59
NOT                  : 54
OF                   : 15
OR                   : 49
PLUS                 : 63 72
PROGRAM              : 1
RBRACKET             : 15 38 83
READLN               : 33
REAL                 : 76
REAL_DIVIDE          : 70
RPAREN               : 45 46 74 82
SEMICOLON            : 2 7 22
STRING               : 80
THEN                 : 26 27 34
TIMES                : 67
TO                   : 40
TRUE                 : 79
TYPE_INTEGER         : 11
TYPE_REAL            : 12
TYPE_STRING          : 14
VAR                  : 3
WHILE                : 28 36
WRITE                : 32
WRITELN              : 31
error                : 

Nonterminals, with rules where they appear

and_expression       : 49 50 51
arraytypes           : 15
closed_statement     : 25 43
code                 : 1
code_or_statement    : 26 27 34 34 35 36
dotless_code         : 42
empty                : 4 6 10 21 23 61 65 71 84
expression           : 37 38 39 39 40 41 44 47 48 49 74 83
expression_tail      : 53 54
expressions          : 18 19 22
expressions_tail     : 20
factor               : 66 67 68 69 70 72 73
file                 : 0
for_condition        : 29 35
identifier_assign_expression : 30
identifier_expression : 77
idlist               : 7
idlistTail           : 8 9
if_condition         : 26 27 28 34 36
length_expression    : 78
name                 : 1
open_statement       : 24 27 28 29
readln_statement     : 33
relation_expression  : 51 52
simple_expression    : 38 53 54 55 56 57 58 59 60
simple_expression_tail : 62 63 64
statement            : 20
string_statement     : 45 46 48
term                 : 62 63 64
term_tail            : 66 67 68 69 70
to_expression        : 39
type                 : 7 15
vardecl              : 5
vars                 : 1
varstail             : 3 5
write_statement      : 31 32

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . PROGRAM name vars code

    PROGRAM         shift and go to state 2

    file                           shift and go to state 1

state 1

    (0) S' -> file .



state 2

    (1) file -> PROGRAM . name vars code
    (2) name -> . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 4

    name                           shift and go to state 3

state 3

    (1) file -> PROGRAM name . vars code
    (3) vars -> . VAR varstail
    (4) vars -> . empty
    (85) empty -> .

    VAR             shift and go to state 6
    BEGIN           reduce using rule 85 (empty -> .)

    vars                           shift and go to state 5
    empty                          shift and go to state 7

state 4

    (2) name -> IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 8


state 5

    (1) file -> PROGRAM name vars . code
    (18) code -> . BEGIN expressions END_DOT

    BEGIN           shift and go to state 10

    code                           shift and go to state 9

state 6

    (3) vars -> VAR . varstail
    (5) varstail -> . vardecl varstail
    (6) varstail -> . empty
    (7) vardecl -> . idlist COLON type SEMICOLON
    (85) empty -> .
    (8) idlist -> . IDENTIFIER idlistTail

    BEGIN           reduce using rule 85 (empty -> .)
    IDENTIFIER      shift and go to state 15

    varstail                       shift and go to state 11
    vardecl                        shift and go to state 12
    empty                          shift and go to state 13
    idlist                         shift and go to state 14

state 7

    (4) vars -> empty .

    BEGIN           reduce using rule 4 (vars -> empty .)


state 8

    (2) name -> IDENTIFIER SEMICOLON .

    VAR             reduce using rule 2 (name -> IDENTIFIER SEMICOLON .)
    BEGIN           reduce using rule 2 (name -> IDENTIFIER SEMICOLON .)


state 9

    (1) file -> PROGRAM name vars code .

    $end            reduce using rule 1 (file -> PROGRAM name vars code .)


state 10

    (18) code -> BEGIN . expressions END_DOT
    (20) expressions -> . statement expressions_tail
    (21) expressions -> . empty
    (24) statement -> . open_statement
    (25) statement -> . closed_statement
    (85) empty -> .
    (26) open_statement -> . IF if_condition THEN code_or_statement
    (27) open_statement -> . IF if_condition THEN code_or_statement ELSE open_statement
    (28) open_statement -> . WHILE if_condition DO open_statement
    (29) open_statement -> . FOR for_condition DO open_statement
    (30) closed_statement -> . IDENTIFIER identifier_assign_expression
    (31) closed_statement -> . WRITELN write_statement
    (32) closed_statement -> . WRITE write_statement
    (33) closed_statement -> . READLN readln_statement
    (34) closed_statement -> . IF if_condition THEN code_or_statement ELSE code_or_statement
    (35) closed_statement -> . FOR for_condition DO code_or_statement
    (36) closed_statement -> . WHILE if_condition DO code_or_statement

    END_DOT         reduce using rule 85 (empty -> .)
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    IDENTIFIER      shift and go to state 24
    WRITELN         shift and go to state 25
    WRITE           shift and go to state 26
    READLN          shift and go to state 27

    expressions                    shift and go to state 16
    statement                      shift and go to state 17
    empty                          shift and go to state 18
    open_statement                 shift and go to state 19
    closed_statement               shift and go to state 20

state 11

    (3) vars -> VAR varstail .

    BEGIN           reduce using rule 3 (vars -> VAR varstail .)


state 12

    (5) varstail -> vardecl . varstail
    (5) varstail -> . vardecl varstail
    (6) varstail -> . empty
    (7) vardecl -> . idlist COLON type SEMICOLON
    (85) empty -> .
    (8) idlist -> . IDENTIFIER idlistTail

    BEGIN           reduce using rule 85 (empty -> .)
    IDENTIFIER      shift and go to state 15

    vardecl                        shift and go to state 12
    varstail                       shift and go to state 28
    empty                          shift and go to state 13
    idlist                         shift and go to state 14

state 13

    (6) varstail -> empty .

    BEGIN           reduce using rule 6 (varstail -> empty .)


state 14

    (7) vardecl -> idlist . COLON type SEMICOLON

    COLON           shift and go to state 29


state 15

    (8) idlist -> IDENTIFIER . idlistTail
    (9) idlistTail -> . COMMA IDENTIFIER idlistTail
    (10) idlistTail -> . empty
    (85) empty -> .

    COMMA           shift and go to state 31
    COLON           reduce using rule 85 (empty -> .)

    idlistTail                     shift and go to state 30
    empty                          shift and go to state 32

state 16

    (18) code -> BEGIN expressions . END_DOT

    END_DOT         shift and go to state 33


state 17

    (20) expressions -> statement . expressions_tail
    (22) expressions_tail -> . SEMICOLON expressions
    (23) expressions_tail -> . empty
    (85) empty -> .

    SEMICOLON       shift and go to state 35
    END_DOT         reduce using rule 85 (empty -> .)
    END             reduce using rule 85 (empty -> .)

    expressions_tail               shift and go to state 34
    empty                          shift and go to state 36

state 18

    (21) expressions -> empty .

    END_DOT         reduce using rule 21 (expressions -> empty .)
    END             reduce using rule 21 (expressions -> empty .)


state 19

    (24) statement -> open_statement .

    SEMICOLON       reduce using rule 24 (statement -> open_statement .)
    END_DOT         reduce using rule 24 (statement -> open_statement .)
    END             reduce using rule 24 (statement -> open_statement .)


state 20

    (25) statement -> closed_statement .

    SEMICOLON       reduce using rule 25 (statement -> closed_statement .)
    END_DOT         reduce using rule 25 (statement -> closed_statement .)
    END             reduce using rule 25 (statement -> closed_statement .)


state 21

    (26) open_statement -> IF . if_condition THEN code_or_statement
    (27) open_statement -> IF . if_condition THEN code_or_statement ELSE open_statement
    (34) closed_statement -> IF . if_condition THEN code_or_statement ELSE code_or_statement
    (44) if_condition -> . expression
    (49) expression -> . expression OR and_expression
    (50) expression -> . and_expression
    (51) and_expression -> . and_expression AND relation_expression
    (52) and_expression -> . relation_expression
    (53) relation_expression -> . simple_expression expression_tail
    (54) relation_expression -> . NOT simple_expression expression_tail
    (62) simple_expression -> . term simple_expression_tail
    (66) term -> . factor term_tail
    (72) factor -> . PLUS factor
    (73) factor -> . MINUS factor
    (74) factor -> . LPAREN expression RPAREN
    (75) factor -> . INTEGER
    (76) factor -> . REAL
    (77) factor -> . IDENTIFIER identifier_expression
    (78) factor -> . IDENTIFIER length_expression
    (79) factor -> . TRUE
    (80) factor -> . STRING
    (81) factor -> . FALSE

    NOT             shift and go to state 42
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 47
    INTEGER         shift and go to state 48
    REAL            shift and go to state 49
    IDENTIFIER      shift and go to state 50
    TRUE            shift and go to state 51
    STRING          shift and go to state 52
    FALSE           shift and go to state 53

    if_condition                   shift and go to state 37
    expression                     shift and go to state 38
    and_expression                 shift and go to state 39
    relation_expression            shift and go to state 40
    simple_expression              shift and go to state 41
    term                           shift and go to state 43
    factor                         shift and go to state 44

state 22

    (28) open_statement -> WHILE . if_condition DO open_statement
    (36) closed_statement -> WHILE . if_condition DO code_or_statement
    (44) if_condition -> . expression
    (49) expression -> . expression OR and_expression
    (50) expression -> . and_expression
    (51) and_expression -> . and_expression AND relation_expression
    (52) and_expression -> . relation_expression
    (53) relation_expression -> . simple_expression expression_tail
    (54) relation_expression -> . NOT simple_expression expression_tail
    (62) simple_expression -> . term simple_expression_tail
    (66) term -> . factor term_tail
    (72) factor -> . PLUS factor
    (73) factor -> . MINUS factor
    (74) factor -> . LPAREN expression RPAREN
    (75) factor -> . INTEGER
    (76) factor -> . REAL
    (77) factor -> . IDENTIFIER identifier_expression
    (78) factor -> . IDENTIFIER length_expression
    (79) factor -> . TRUE
    (80) factor -> . STRING
    (81) factor -> . FALSE

    NOT             shift and go to state 42
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 47
    INTEGER         shift and go to state 48
    REAL            shift and go to state 49
    IDENTIFIER      shift and go to state 50
    TRUE            shift and go to state 51
    STRING          shift and go to state 52
    FALSE           shift and go to state 53

    if_condition                   shift and go to state 54
    expression                     shift and go to state 38
    and_expression                 shift and go to state 39
    relation_expression            shift and go to state 40
    simple_expression              shift and go to state 41
    term                           shift and go to state 43
    factor                         shift and go to state 44

state 23

    (29) open_statement -> FOR . for_condition DO open_statement
    (35) closed_statement -> FOR . for_condition DO code_or_statement
    (39) for_condition -> . expression ASSIGN expression to_expression
    (49) expression -> . expression OR and_expression
    (50) expression -> . and_expression
    (51) and_expression -> . and_expression AND relation_expression
    (52) and_expression -> . relation_expression
    (53) relation_expression -> . simple_expression expression_tail
    (54) relation_expression -> . NOT simple_expression expression_tail
    (62) simple_expression -> . term simple_expression_tail
    (66) term -> . factor term_tail
    (72) factor -> . PLUS factor
    (73) factor -> . MINUS factor
    (74) factor -> . LPAREN expression RPAREN
    (75) factor -> . INTEGER
    (76) factor -> . REAL
    (77) factor -> . IDENTIFIER identifier_expression
    (78) factor -> . IDENTIFIER length_expression
    (79) factor -> . TRUE
    (80) factor -> . STRING
    (81) factor -> . FALSE

    NOT             shift and go to state 42
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 47
    INTEGER         shift and go to state 48
    REAL            shift and go to state 49
    IDENTIFIER      shift and go to state 50
    TRUE            shift and go to state 51
    STRING          shift and go to state 52
    FALSE           shift and go to state 53

    for_condition                  shift and go to state 55
    expression                     shift and go to state 56
    and_expression                 shift and go to state 39
    relation_expression            shift and go to state 40
    simple_expression              shift and go to state 41
    term                           shift and go to state 43
    factor                         shift and go to state 44

state 24

    (30) closed_statement -> IDENTIFIER . identifier_assign_expression
    (37) identifier_assign_expression -> . ASSIGN expression
    (38) identifier_assign_expression -> . LBRACKET simple_expression RBRACKET ASSIGN expression

    ASSIGN          shift and go to state 58
    LBRACKET        shift and go to state 59

    identifier_assign_expression   shift and go to state 57

state 25

    (31) closed_statement -> WRITELN . write_statement
    (45) write_statement -> . LPAREN string_statement RPAREN

    LPAREN          shift and go to state 61

    write_statement                shift and go to state 60

state 26

    (32) closed_statement -> WRITE . write_statement
    (45) write_statement -> . LPAREN string_statement RPAREN

    LPAREN          shift and go to state 61

    write_statement                shift and go to state 62

state 27

    (33) closed_statement -> READLN . readln_statement
    (46) readln_statement -> . LPAREN string_statement RPAREN

    LPAREN          shift and go to state 64

    readln_statement               shift and go to state 63

state 28

    (5) varstail -> vardecl varstail .

    BEGIN           reduce using rule 5 (varstail -> vardecl varstail .)


state 29

    (7) vardecl -> idlist COLON . type SEMICOLON
    (11) type -> . TYPE_INTEGER
    (12) type -> . TYPE_REAL
    (13) type -> . BOOLEAN
    (14) type -> . TYPE_STRING
    (15) type -> . ARRAY LBRACKET arraytypes RBRACKET OF type

    TYPE_INTEGER    shift and go to state 66
    TYPE_REAL       shift and go to state 67
    BOOLEAN         shift and go to state 68
    TYPE_STRING     shift and go to state 69
    ARRAY           shift and go to state 70

    type                           shift and go to state 65

state 30

    (8) idlist -> IDENTIFIER idlistTail .

    COLON           reduce using rule 8 (idlist -> IDENTIFIER idlistTail .)


state 31

    (9) idlistTail -> COMMA . IDENTIFIER idlistTail

    IDENTIFIER      shift and go to state 71


state 32

    (10) idlistTail -> empty .

    COLON           reduce using rule 10 (idlistTail -> empty .)


state 33

    (18) code -> BEGIN expressions END_DOT .

    $end            reduce using rule 18 (code -> BEGIN expressions END_DOT .)


state 34

    (20) expressions -> statement expressions_tail .

    END_DOT         reduce using rule 20 (expressions -> statement expressions_tail .)
    END             reduce using rule 20 (expressions -> statement expressions_tail .)


state 35

    (22) expressions_tail -> SEMICOLON . expressions
    (20) expressions -> . statement expressions_tail
    (21) expressions -> . empty
    (24) statement -> . open_statement
    (25) statement -> . closed_statement
    (85) empty -> .
    (26) open_statement -> . IF if_condition THEN code_or_statement
    (27) open_statement -> . IF if_condition THEN code_or_statement ELSE open_statement
    (28) open_statement -> . WHILE if_condition DO open_statement
    (29) open_statement -> . FOR for_condition DO open_statement
    (30) closed_statement -> . IDENTIFIER identifier_assign_expression
    (31) closed_statement -> . WRITELN write_statement
    (32) closed_statement -> . WRITE write_statement
    (33) closed_statement -> . READLN readln_statement
    (34) closed_statement -> . IF if_condition THEN code_or_statement ELSE code_or_statement
    (35) closed_statement -> . FOR for_condition DO code_or_statement
    (36) closed_statement -> . WHILE if_condition DO code_or_statement

    END_DOT         reduce using rule 85 (empty -> .)
    END             reduce using rule 85 (empty -> .)
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    IDENTIFIER      shift and go to state 24
    WRITELN         shift and go to state 25
    WRITE           shift and go to state 26
    READLN          shift and go to state 27

    expressions                    shift and go to state 72
    statement                      shift and go to state 17
    empty                          shift and go to state 18
    open_statement                 shift and go to state 19
    closed_statement               shift and go to state 20

state 36

    (23) expressions_tail -> empty .

    END_DOT         reduce using rule 23 (expressions_tail -> empty .)
    END             reduce using rule 23 (expressions_tail -> empty .)


state 37

    (26) open_statement -> IF if_condition . THEN code_or_statement
    (27) open_statement -> IF if_condition . THEN code_or_statement ELSE open_statement
    (34) closed_statement -> IF if_condition . THEN code_or_statement ELSE code_or_statement

    THEN            shift and go to state 73


state 38

    (44) if_condition -> expression .
    (49) expression -> expression . OR and_expression

    THEN            reduce using rule 44 (if_condition -> expression .)
    DO              reduce using rule 44 (if_condition -> expression .)
    OR              shift and go to state 74


state 39

    (50) expression -> and_expression .
    (51) and_expression -> and_expression . AND relation_expression

    OR              reduce using rule 50 (expression -> and_expression .)
    THEN            reduce using rule 50 (expression -> and_expression .)
    DO              reduce using rule 50 (expression -> and_expression .)
    ASSIGN          reduce using rule 50 (expression -> and_expression .)
    RPAREN          reduce using rule 50 (expression -> and_expression .)
    SEMICOLON       reduce using rule 50 (expression -> and_expression .)
    END_DOT         reduce using rule 50 (expression -> and_expression .)
    END             reduce using rule 50 (expression -> and_expression .)
    ELSE            reduce using rule 50 (expression -> and_expression .)
    COMMA           reduce using rule 50 (expression -> and_expression .)
    RBRACKET        reduce using rule 50 (expression -> and_expression .)
    TO              reduce using rule 50 (expression -> and_expression .)
    DOWNTO          reduce using rule 50 (expression -> and_expression .)
    AND             shift and go to state 75


state 40

    (52) and_expression -> relation_expression .

    AND             reduce using rule 52 (and_expression -> relation_expression .)
    OR              reduce using rule 52 (and_expression -> relation_expression .)
    THEN            reduce using rule 52 (and_expression -> relation_expression .)
    DO              reduce using rule 52 (and_expression -> relation_expression .)
    ASSIGN          reduce using rule 52 (and_expression -> relation_expression .)
    RPAREN          reduce using rule 52 (and_expression -> relation_expression .)
    SEMICOLON       reduce using rule 52 (and_expression -> relation_expression .)
    END_DOT         reduce using rule 52 (and_expression -> relation_expression .)
    END             reduce using rule 52 (and_expression -> relation_expression .)
    ELSE            reduce using rule 52 (and_expression -> relation_expression .)
    COMMA           reduce using rule 52 (and_expression -> relation_expression .)
    RBRACKET        reduce using rule 52 (and_expression -> relation_expression .)
    TO              reduce using rule 52 (and_expression -> relation_expression .)
    DOWNTO          reduce using rule 52 (and_expression -> relation_expression .)


state 41

    (53) relation_expression -> simple_expression . expression_tail
    (55) expression_tail -> . LT simple_expression
    (56) expression_tail -> . GT simple_expression
    (57) expression_tail -> . LE simple_expression
    (58) expression_tail -> . GE simple_expression
    (59) expression_tail -> . NE simple_expression
    (60) expression_tail -> . EQUAL simple_expression
    (61) expression_tail -> . empty
    (85) empty -> .

    LT              shift and go to state 77
    GT              shift and go to state 78
    LE              shift and go to state 79
    GE              shift and go to state 80
    NE              shift and go to state 81
    EQUAL           shift and go to state 82
    AND             reduce using rule 85 (empty -> .)
    OR              reduce using rule 85 (empty -> .)
    THEN            reduce using rule 85 (empty -> .)
    DO              reduce using rule 85 (empty -> .)
    ASSIGN          reduce using rule 85 (empty -> .)
    RPAREN          reduce using rule 85 (empty -> .)
    SEMICOLON       reduce using rule 85 (empty -> .)
    END_DOT         reduce using rule 85 (empty -> .)
    END             reduce using rule 85 (empty -> .)
    ELSE            reduce using rule 85 (empty -> .)
    COMMA           reduce using rule 85 (empty -> .)
    RBRACKET        reduce using rule 85 (empty -> .)
    TO              reduce using rule 85 (empty -> .)
    DOWNTO          reduce using rule 85 (empty -> .)

    expression_tail                shift and go to state 76
    empty                          shift and go to state 83

state 42

    (54) relation_expression -> NOT . simple_expression expression_tail
    (62) simple_expression -> . term simple_expression_tail
    (66) term -> . factor term_tail
    (72) factor -> . PLUS factor
    (73) factor -> . MINUS factor
    (74) factor -> . LPAREN expression RPAREN
    (75) factor -> . INTEGER
    (76) factor -> . REAL
    (77) factor -> . IDENTIFIER identifier_expression
    (78) factor -> . IDENTIFIER length_expression
    (79) factor -> . TRUE
    (80) factor -> . STRING
    (81) factor -> . FALSE

    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 47
    INTEGER         shift and go to state 48
    REAL            shift and go to state 49
    IDENTIFIER      shift and go to state 50
    TRUE            shift and go to state 51
    STRING          shift and go to state 52
    FALSE           shift and go to state 53

    simple_expression              shift and go to state 84
    term                           shift and go to state 43
    factor                         shift and go to state 44

state 43

    (62) simple_expression -> term . simple_expression_tail
    (63) simple_expression_tail -> . PLUS term simple_expression_tail
    (64) simple_expression_tail -> . MINUS term simple_expression_tail
    (65) simple_expression_tail -> . empty
    (85) empty -> .

    PLUS            shift and go to state 86
    MINUS           shift and go to state 87
    LT              reduce using rule 85 (empty -> .)
    GT              reduce using rule 85 (empty -> .)
    LE              reduce using rule 85 (empty -> .)
    GE              reduce using rule 85 (empty -> .)
    NE              reduce using rule 85 (empty -> .)
    EQUAL           reduce using rule 85 (empty -> .)
    AND             reduce using rule 85 (empty -> .)
    OR              reduce using rule 85 (empty -> .)
    THEN            reduce using rule 85 (empty -> .)
    DO              reduce using rule 85 (empty -> .)
    ASSIGN          reduce using rule 85 (empty -> .)
    RPAREN          reduce using rule 85 (empty -> .)
    SEMICOLON       reduce using rule 85 (empty -> .)
    END_DOT         reduce using rule 85 (empty -> .)
    END             reduce using rule 85 (empty -> .)
    ELSE            reduce using rule 85 (empty -> .)
    COMMA           reduce using rule 85 (empty -> .)
    RBRACKET        reduce using rule 85 (empty -> .)
    TO              reduce using rule 85 (empty -> .)
    DOWNTO          reduce using rule 85 (empty -> .)

    simple_expression_tail         shift and go to state 85
    empty                          shift and go to state 88

state 44

    (66) term -> factor . term_tail
    (67) term_tail -> . TIMES factor term_tail
    (68) term_tail -> . DIVIDE factor term_tail
    (69) term_tail -> . MOD factor term_tail
    (70) term_tail -> . REAL_DIVIDE factor term_tail
    (71) term_tail -> . empty
    (85) empty -> .

    TIMES           shift and go to state 90
    DIVIDE          shift and go to state 91
    MOD             shift and go to state 92
    REAL_DIVIDE     shift and go to state 93
    PLUS            reduce using rule 85 (empty -> .)
    MINUS           reduce using rule 85 (empty -> .)
    LT              reduce using rule 85 (empty -> .)
    GT              reduce using rule 85 (empty -> .)
    LE              reduce using rule 85 (empty -> .)
    GE              reduce using rule 85 (empty -> .)
    NE              reduce using rule 85 (empty -> .)
    EQUAL           reduce using rule 85 (empty -> .)
    AND             reduce using rule 85 (empty -> .)
    OR              reduce using rule 85 (empty -> .)
    THEN            reduce using rule 85 (empty -> .)
    DO              reduce using rule 85 (empty -> .)
    ASSIGN          reduce using rule 85 (empty -> .)
    RPAREN          reduce using rule 85 (empty -> .)
    SEMICOLON       reduce using rule 85 (empty -> .)
    END_DOT         reduce using rule 85 (empty -> .)
    END             reduce using rule 85 (empty -> .)
    ELSE            reduce using rule 85 (empty -> .)
    COMMA           reduce using rule 85 (empty -> .)
    RBRACKET        reduce using rule 85 (empty -> .)
    TO              reduce using rule 85 (empty -> .)
    DOWNTO          reduce using rule 85 (empty -> .)

    term_tail                      shift and go to state 89
    empty                          shift and go to state 94

state 45

    (72) factor -> PLUS . factor
    (72) factor -> . PLUS factor
    (73) factor -> . MINUS factor
    (74) factor -> . LPAREN expression RPAREN
    (75) factor -> . INTEGER
    (76) factor -> . REAL
    (77) factor -> . IDENTIFIER identifier_expression
    (78) factor -> . IDENTIFIER length_expression
    (79) factor -> . TRUE
    (80) factor -> . STRING
    (81) factor -> . FALSE

    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 47
    INTEGER         shift and go to state 48
    REAL            shift and go to state 49
    IDENTIFIER      shift and go to state 50
    TRUE            shift and go to state 51
    STRING          shift and go to state 52
    FALSE           shift and go to state 53

    factor                         shift and go to state 95

state 46

    (73) factor -> MINUS . factor
    (72) factor -> . PLUS factor
    (73) factor -> . MINUS factor
    (74) factor -> . LPAREN expression RPAREN
    (75) factor -> . INTEGER
    (76) factor -> . REAL
    (77) factor -> . IDENTIFIER identifier_expression
    (78) factor -> . IDENTIFIER length_expression
    (79) factor -> . TRUE
    (80) factor -> . STRING
    (81) factor -> . FALSE

    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 47
    INTEGER         shift and go to state 48
    REAL            shift and go to state 49
    IDENTIFIER      shift and go to state 50
    TRUE            shift and go to state 51
    STRING          shift and go to state 52
    FALSE           shift and go to state 53

    factor                         shift and go to state 96

state 47

    (74) factor -> LPAREN . expression RPAREN
    (49) expression -> . expression OR and_expression
    (50) expression -> . and_expression
    (51) and_expression -> . and_expression AND relation_expression
    (52) and_expression -> . relation_expression
    (53) relation_expression -> . simple_expression expression_tail
    (54) relation_expression -> . NOT simple_expression expression_tail
    (62) simple_expression -> . term simple_expression_tail
    (66) term -> . factor term_tail
    (72) factor -> . PLUS factor
    (73) factor -> . MINUS factor
    (74) factor -> . LPAREN expression RPAREN
    (75) factor -> . INTEGER
    (76) factor -> . REAL
    (77) factor -> . IDENTIFIER identifier_expression
    (78) factor -> . IDENTIFIER length_expression
    (79) factor -> . TRUE
    (80) factor -> . STRING
    (81) factor -> . FALSE

    NOT             shift and go to state 42
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 47
    INTEGER         shift and go to state 48
    REAL            shift and go to state 49
    IDENTIFIER      shift and go to state 50
    TRUE            shift and go to state 51
    STRING          shift and go to state 52
    FALSE           shift and go to state 53

    expression                     shift and go to state 97
    and_expression                 shift and go to state 39
    relation_expression            shift and go to state 40
    simple_expression              shift and go to state 41
    term                           shift and go to state 43
    factor                         shift and go to state 44

state 48

    (75) factor -> INTEGER .

    TIMES           reduce using rule 75 (factor -> INTEGER .)
    DIVIDE          reduce using rule 75 (factor -> INTEGER .)
    MOD             reduce using rule 75 (factor -> INTEGER .)
    REAL_DIVIDE     reduce using rule 75 (factor -> INTEGER .)
    PLUS            reduce using rule 75 (factor -> INTEGER .)
    MINUS           reduce using rule 75 (factor -> INTEGER .)
    LT              reduce using rule 75 (factor -> INTEGER .)
    GT              reduce using rule 75 (factor -> INTEGER .)
    LE              reduce using rule 75 (factor -> INTEGER .)
    GE              reduce using rule 75 (factor -> INTEGER .)
    NE              reduce using rule 75 (factor -> INTEGER .)
    EQUAL           reduce using rule 75 (factor -> INTEGER .)
    AND             reduce using rule 75 (factor -> INTEGER .)
    OR              reduce using rule 75 (factor -> INTEGER .)
    THEN            reduce using rule 75 (factor -> INTEGER .)
    DO              reduce using rule 75 (factor -> INTEGER .)
    ASSIGN          reduce using rule 75 (factor -> INTEGER .)
